--- a/module-challenge/index.html
+++ b/module-challenge/index.html
@@ -7,45 +7,51 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Bellybutton Biodiversity</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <style>   
-    </style>
+        <!-- <link rel="stylesheet" src="css/style.css"> -->
+    <style>
+        body {font-family: Georgia, serif}
+        </style>
     </head>
 
-<body>
-
+<body class="jumbotron text-white jumbotron-image shadow" style="background-image: url(https://www.cedars-sinai.org/content/dam/cedars-sinai/blog/2020/06/viruses-bacteria-fungi.jpg);">
     <div class="container">
         <div class="row">
-        <div class="col-md-12 jumbotron text-center" > 
-        <div class="jumbotron text-center" >  
-            <h1>Belly Button Biodiversity Dashboard</h1>
-            <p>Use the interactive charts below to explore the dataset</p>
-        </div>
+            <div class="col-md-12 jumbotron text-center"> 
+                <!-- <div class="col-md-12 jumbotron text-center" style= "background-image: url('viruses-bacteria-fungi.jpg');">  -->
+                <div class="jumbotron text-center" >  
+                    <!-- <div class="jumbotron text-center" style= "background-image: url('viruses-bacteria-fungi.jpg');">  -->
+                <h1>Belly Button Biodiversity Dashboard</h1>
+                <br>
+                <p>Use the interactive charts below to explore the dataset</p>
+                </div>
+            </div>
         </div>
         <div class="row">
-        <div class="col-md-2">
-            <div class="well">
-            <h5>Test Subject ID No.:</h5>
-            <!-- <select id="selDataset"></select> -->
-            <select id="selDataset" onchange="optionChanged(this.value)"></select>
+            <div class="col-md-2">
+                <div class="well">
+                    <h5>Test Subject ID No.:</h5>
+                    <!-- <select id="selDataset"></select> -->
+                    <select id="selDataset" onchange="optionChanged(this.value)"></select>
+                </div>
+                <div class="panel panel-primary">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">Demographic Info</h3>
+                    </div>
+                    <div id="sample-metadata" class="panel-body"></div>
+                </div>
             </div>
-            <div class="panel panel-primary">
-            <div class="panel-heading">
-                <h3 class="panel-title">Demographic Info</h3>
+            <div class="col-md-5">
+                <div id="bar"></div>
             </div>
-            <div id="sample-metadata" class="panel-body"></div>
+            <div class="col-md-5">
+                <div id="gauge"></div>
             </div>
         </div>
-        <div class="col-md-5">
-            <div id="bar"></div>
-        </div>
-        <div class="col-md-5">
-            <div id="gauge"></div>
-        </div>
-        </div>
+        <br>
         <div class="row">
-        <div class="col-md-12">
-            <div id="bubble"></div>
-        </div>
+            <div class="col-md-12">
+                <div id="bubble"></div>
+            </div>
         </div>
     </div>
 
